@@ -2329,8 +2329,13 @@ bool DocumentImpl::setFocusNode(NodeImpl *newFocusNode)
             }
             if (focusWidget)
                 focusWidget->setFocus();
-            else
+            else {
                 view()->setFocus();
+                if (m_focusNode->renderer()) {
+                    updateLayout();
+                    m_focusNode->renderer()->enclosingLayer()->scrollRectToVisible(m_focusNode->getRect());
+                }
+            }
         }
    }
 
